Added a map page to display locations of friends throughout the U.S.

--- a/RestMySQL/src/main/resources/static/index.html
+++ b/RestMySQL/src/main/resources/static/index.html
@@ -13,7 +13,7 @@
     <script src="index.js"></script>
     <!-- CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <title>Student Portals</title>
+    <title>Friend Repository</title>
 </head>
 
 <body class="containter-fluid bg-light" onload="initialize()">
@@ -22,7 +22,7 @@
     <div id="pageLayout" class="d-flex row" style="padding-top: 5%">
         <!-- Cards Displayed on Left -->
         <div id="cardGroup" class="col-md-9 p2">
-            <div class="text-center" id="students"></div>
+            <div class="text-center" id="friends"></div>
         </div>
 
     </div>
