--- a/RestMySQL/src/main/resources/static/index.html
+++ b/RestMySQL/src/main/resources/static/index.html
@@ -30,6 +30,10 @@
   <li class="nav-item">
     <a class="nav-link" href="addFriend.html">Add</a>
   </li>
+  
+  <li class="nav-item">
+    <a class="nav-link" href="unFriend.html">Remove</a>
+  </li>
   <li class="nav-item">
     <a class="nav-link active" href="mapTest.html">Locations</a>
   </li>
