--- a/RestMySQL/src/main/resources/static/mapTest.html
+++ b/RestMySQL/src/main/resources/static/mapTest.html
@@ -11,6 +11,8 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.js"></script>
 	<script src="js/color.jquery.js"></script>
   <script src="js/jquery.usmap.js"></script>
+      <link rel="stylesheet" href="index.css">
+  
 
     <title>Map</title>
 
@@ -20,10 +22,8 @@
              
 </head>
 
-<body>
+<body onload="initialize()">
   <div id="map" style="width: 930px; height: 630px; border: solid 3px red;"></div>
-
-
 
 </body>
 
